--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         header { 
             text-align: center; 
             padding: 100px 20px; 
-            background: url('https://source.unsplash.com/1600x600/?ocean') no-repeat center center; 
+            background: url('https://images.unsplash.com/photo-1526401485004-2fda9f6d5c6b') no-repeat center center; 
             background-size: cover; 
             color: white; 
             position: relative;
@@ -57,7 +57,7 @@
 
 <!-- Featured Image Section -->
 <section id="featured-image">
-    <img src="https://source.unsplash.com/1600x600/?mountains,temple" alt="Featured Image" style="width:100%; height:auto;">
+    <img src="https://images.unsplash.com/photo-1542744095-fcf48d80b0fd" alt="Featured Image" style="width:100%; height:auto;">
 </section>
 
 <section id="about">
@@ -88,7 +88,7 @@
 <section id="contact">
     <h2>Contact Us</h2>
     <p>If you have any inquiries, would like to learn more about Shui Fund, or are interested in joining our team, please fill out the form below. Your message and uploaded files will be directed to our team for a prompt response.</p>
-    <form action="https://formspree.io/f/mnqyqleg" method="POST" enctype="multipart/form-data">
+    <form action="https://formspree.io/f/xqaejzqw" method="POST" enctype="multipart/form-data">
         <label for="name">Name:</label>
         <input type="text" name="name" required>
 
@@ -99,7 +99,7 @@
         <textarea name="message" rows="5" required placeholder="Please include any inquiries or additional details."></textarea>
 
         <label for="file">Upload Resume/Cover Letter (PDF only):</label>
-        <input type="file" name="file" accept="application/pdf">
+        <input type="file" name="file" accept="application/pdf" required>
 
         <button type="submit">Send Message</button>
     </form>
