--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         header { 
             text-align: center; 
             padding: 100px 20px; 
-            background: url('https://images.unsplash.com/photo-1526401485004-2fda9f6d5c6b') no-repeat center center; 
+            background: url('https://static01.nyt.com/images/2017/09/15/arts/15landscape2/15landscape2-master1050.jpg') no-repeat center center; 
             background-size: cover; 
             color: white; 
             position: relative;
@@ -57,7 +57,7 @@
 
 <!-- Featured Image Section -->
 <section id="featured-image">
-    <img src="https://images.unsplash.com/photo-1542744095-fcf48d80b0fd" alt="Featured Image" style="width:100%; height:auto;">
+    <img src="https://static01.nyt.com/images/2017/09/15/arts/15landscape2/15landscape2-master1050.jpg" alt="Featured Image" style="width:100%; height:auto;">
 </section>
 
 <section id="about">
