--- a/index.html
+++ b/index.html
@@ -5,6 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shui Fund - Investment Strategies & Research</title>
+    <meta name="description" content="Shui Fund is a global investment firm specializing in American, Hong Kong, Chinese, and Indian markets. Our strategies include hedge fund management, quantitative trading, and cryptocurrency investments.">
+    <meta name="keywords" content="Shui Fund, Investment Strategies, Hedge Fund, Quantitative Trading, Cryptocurrency, American Stock Market, Hong Kong Market, Chinese Market, Indian Market, Currency Trading">
+    <meta name="author" content="Shui Fund">
+    <link rel="canonical" href="https://shuifund.com/">
+
+    <!-- Open Graph Tags for Social Sharing -->
+    <meta property="og:title" content="Shui Fund - Global Investment Strategies">
+    <meta property="og:description" content="Shui Fund specializes in global markets with strategies in hedge funds, quantitative research, and cryptocurrency investments.">
+    <meta property="og:image" content="https://static01.nyt.com/images/2017/09/15/arts/15landscape2/15landscape2-master1050.jpg">
+    <meta property="og:url" content="https://shuifund.com/">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card Metadata -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Shui Fund - Global Investment Strategies">
+    <meta name="twitter:description" content="Explore Shui Fund’s diversified investment strategies, including hedge fund management, currency trading, and crypto investments.">
+    <meta name="twitter:image" content="https://static01.nyt.com/images/2017/09/15/arts/15landscape2/15landscape2-master1050.jpg">
+
     <style>
         body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
         nav { background-color: #003366; color: white; padding: 10px; text-align: center; }
@@ -55,9 +73,8 @@
     <p>Your trusted partner in global investments and research.</p>
 </header>
 
-<!-- Featured Image Section -->
 <section id="featured-image">
-    <img src="https://static01.nyt.com/images/2017/09/15/arts/15landscape2/15landscape2-master1050.jpg" alt="Featured Image" style="width:100%; height:auto;">
+    <img src="https://static01.nyt.com/images/2017/09/15/arts/15landscape2/15landscape2-master1050.jpg" alt="Shui Fund Landscape" style="width:100%; height:auto;">
 </section>
 
 <section id="about">
@@ -71,23 +88,21 @@
     <p>Our primary focus is on high-potential global markets with a diverse range of strategies:</p>
     <ul>
         <li><strong>American Stock Market:</strong> Leveraging quantitative models to navigate market dynamics and identify growth opportunities.</li>
-        <li><strong>Hong Kong and Chinese Markets:</strong> Maintaining a long-term bullish stance on China while capitalizing on sudden market fluctuations and policy-driven changes to generate returns.</li>
+        <li><strong>Hong Kong and Chinese Markets:</strong> Maintaining a long-term bullish stance on China while capitalizing on sudden market fluctuations and policy-driven changes.</li>
         <li><strong>Indian Stock Market:</strong> Investing in one of the fastest-growing global economies with an emphasis on high-growth sectors.</li>
-        <li><strong>Currency Trading & Exchange:</strong> Exploiting currency market movements to diversify risk and enhance portfolio returns.</li>
-        <li><strong>Cryptocurrency Trading:</strong> Exploring opportunities in the evolving digital asset space to capture emerging trends.</li>
+        <li><strong>Currency Trading & Exchange:</strong> Exploiting currency market movements to diversify risk and enhance returns.</li>
+        <li><strong>Cryptocurrency Trading:</strong> Exploring digital asset opportunities to capture emerging trends.</li>
     </ul>
-    <p>Our diversified strategies encompass hedge fund management, quantitative trading models, and comprehensive market research to achieve consistent, long-term growth for our investors.</p>
 </section>
 
 <section id="careers">
     <h2>Careers</h2>
-    <p>At Shui Fund, we are always looking for talented individuals to join our team. If you are passionate about global markets, quantitative research, and innovative investment strategies, we encourage you to express your interest.</p>
-    <p>Please fill out the contact form below and include a brief introduction about yourself (around 100 words). Our team will review your submission and reach out to you if there is a suitable opportunity.</p>
+    <p>Shui Fund is always looking for talented individuals to join our team. If you are passionate about global markets, quantitative research, and innovative strategies, express your interest by submitting a brief introduction (around 100 words) through the contact form below.</p>
 </section>
 
 <section id="contact">
     <h2>Contact Us</h2>
-    <p>If you have any inquiries, would like to learn more about Shui Fund, or are interested in joining our team, please fill out the form below. Your message will be directed to our team for a prompt response.</p>
+    <p>Interested in learning more about Shui Fund or joining our team? Fill out the form below. Your message will be directed to our team for a prompt response.</p>
     <form action="https://formspree.io/f/xqaejzqw" method="POST">
         <label for="name">Name:</label>
         <input type="text" name="name" required>
@@ -105,11 +120,11 @@
 <section id="legal">
     <h2>Legal & Compliance</h2>
     <p><strong>Disclosures:</strong><br>
-        The information provided on this website is for informational and educational purposes only. Past performance is not indicative of future results. Investing involves risks, including the possible loss of principal. Portfolio allocations are for illustrative purposes and may not reflect actual investments. Investors should consult their financial advisors before making investment decisions. Shui Fund does not guarantee the accuracy or completeness of the information provided.
+        Information provided on this website is for informational purposes only. Past performance does not guarantee future results. Investments carry risk, including the potential loss of principal. Portfolio allocations are illustrative and may not represent actual investments.
     </p>
 
     <p><strong>Privacy Policy:</strong><br>
-        Shui Fund respects your privacy. We collect only necessary information to improve user experience and handle inquiries. We do not sell or rent personal data to third parties. By using this website, you consent to our data collection practices. Contact us through the provided form for further details or to request data deletion.
+        Shui Fund values your privacy. We collect necessary information to enhance user experience. Data is not sold or rented to third parties. By using this site, you agree to our data collection practices.
     </p>
 </section>
 
