--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
     <meta name="twitter:description" content="Explore Shui Fund’s diversified investment strategies, including hedge fund management, currency trading, and crypto investments.">
     <meta name="twitter:image" content="https://static01.nyt.com/images/2017/09/15/arts/15landscape2/15landscape2-master1050.jpg">
 
+    <!-- robots.txt instruction to allow all crawlers -->
+    <meta name="robots" content="index, follow">
+
+    <!-- Sitemap reference -->
+    <link rel="sitemap" type="application/xml" title="Sitemap" href="https://shuifund.com/sitemap.xml" />
+
     <style>
         body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
         nav { background-color: #003366; color: white; padding: 10px; text-align: center; }
