--- a/index.html
+++ b/index.html
@@ -9,25 +9,23 @@
     <meta name="keywords" content="Shui Fund, Investment Strategies, Hedge Fund, Quantitative Trading, Cryptocurrency, American Stock Market, Hong Kong Market, Chinese Market, Indian Market, Currency Trading">
     <meta name="author" content="Shui Fund">
     <link rel="canonical" href="https://shuifund.com/">
+    <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
 
-    <!-- Open Graph Tags for Social Sharing -->
+    <!-- Open Graph Tags -->
     <meta property="og:title" content="Shui Fund - Global Investment Strategies">
     <meta property="og:description" content="Shui Fund specializes in global markets with strategies in hedge funds, quantitative research, and cryptocurrency investments.">
     <meta property="og:image" content="https://static01.nyt.com/images/2017/09/15/arts/15landscape2/15landscape2-master1050.jpg">
     <meta property="og:url" content="https://shuifund.com/">
     <meta property="og:type" content="website">
 
-    <!-- Twitter Card Metadata -->
+    <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Shui Fund - Global Investment Strategies">
     <meta name="twitter:description" content="Explore Shui Fund’s diversified investment strategies, including hedge fund management, currency trading, and crypto investments.">
     <meta name="twitter:image" content="https://static01.nyt.com/images/2017/09/15/arts/15landscape2/15landscape2-master1050.jpg">
 
-    <!-- robots.txt instruction to allow all crawlers -->
+    <!-- Allow search engines to index -->
     <meta name="robots" content="index, follow">
-
-    <!-- Sitemap reference -->
-    <link rel="sitemap" type="application/xml" title="Sitemap" href="https://shuifund.com/sitemap.xml" />
 
     <style>
         body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
@@ -50,11 +48,6 @@
         header h1, header p {
             position: relative;
             z-index: 1;
-        }
-        #featured-image {
-            width: 100%;
-            height: auto;
-            display: block;
         }
         section { padding: 20px; max-width: 900px; margin: auto; }
         footer { background-color: #f1f1f1; text-align: center; padding: 10px; font-size: 14px; }
@@ -79,36 +72,31 @@
     <p>Your trusted partner in global investments and research.</p>
 </header>
 
-<section id="featured-image">
-    <img src="https://static01.nyt.com/images/2017/09/15/arts/15landscape2/15landscape2-master1050.jpg" alt="Shui Fund Landscape" style="width:100%; height:auto;">
-</section>
-
 <section id="about">
     <h2>About Us</h2>
-    <p>Shui Fund is built on a foundation of global expertise, with team members who bring experience from top-tier companies across finance, biotechnology, and technology sectors. This diverse background enables us to navigate complex markets with a holistic and data-driven approach.</p>
-    <p>We are proud to be funded by elite family offices based in Hong Kong, New York, and Singapore, reinforcing our commitment to delivering consistent and superior investment outcomes for our clients.</p>
+    <p>Shui Fund is built on a foundation of global expertise, with team members from top-tier companies across finance, biotechnology, and technology sectors. This diverse background enables us to navigate complex markets with a holistic and data-driven approach.</p>
+    <p>We are proud to be funded by elite family offices based in Hong Kong, New York, and Singapore, reinforcing our commitment to delivering consistent and superior investment outcomes.</p>
 </section>
 
 <section id="strategy">
     <h2>Investment Strategies</h2>
-    <p>Our primary focus is on high-potential global markets with a diverse range of strategies:</p>
     <ul>
-        <li><strong>American Stock Market:</strong> Leveraging quantitative models to navigate market dynamics and identify growth opportunities.</li>
-        <li><strong>Hong Kong and Chinese Markets:</strong> Maintaining a long-term bullish stance on China while capitalizing on sudden market fluctuations and policy-driven changes.</li>
-        <li><strong>Indian Stock Market:</strong> Investing in one of the fastest-growing global economies with an emphasis on high-growth sectors.</li>
-        <li><strong>Currency Trading & Exchange:</strong> Exploiting currency market movements to diversify risk and enhance returns.</li>
-        <li><strong>Cryptocurrency Trading:</strong> Exploring digital asset opportunities to capture emerging trends.</li>
+        <li><strong>American Stock Market:</strong> Leveraging quantitative models to identify growth opportunities.</li>
+        <li><strong>Hong Kong and Chinese Markets:</strong> Capitalizing on market fluctuations and policy-driven changes.</li>
+        <li><strong>Indian Stock Market:</strong> Investing in high-growth sectors of a fast-growing economy.</li>
+        <li><strong>Currency Trading:</strong> Utilizing exchange rate movements to diversify and enhance returns.</li>
+        <li><strong>Cryptocurrency Trading:</strong> Exploring digital assets to capture emerging trends.</li>
     </ul>
 </section>
 
 <section id="careers">
     <h2>Careers</h2>
-    <p>Shui Fund is always looking for talented individuals to join our team. If you are passionate about global markets, quantitative research, and innovative strategies, express your interest by submitting a brief introduction (around 100 words) through the contact form below.</p>
+    <p>We are always seeking talented individuals. If you are passionate about global markets, quantitative research, or innovative strategies, introduce yourself (100 words) via the contact form below.</p>
 </section>
 
 <section id="contact">
     <h2>Contact Us</h2>
-    <p>Interested in learning more about Shui Fund or joining our team? Fill out the form below. Your message will be directed to our team for a prompt response.</p>
+    <p>Interested in learning more or joining our team? Complete the form below. We’ll reach out promptly.</p>
     <form action="https://formspree.io/f/xqaejzqw" method="POST">
         <label for="name">Name:</label>
         <input type="text" name="name" required>
@@ -117,7 +105,7 @@
         <input type="email" name="email" required>
 
         <label for="message">Introduction (100 words):</label>
-        <textarea name="message" rows="5" maxlength="700" required placeholder="Briefly introduce yourself and your interest in Shui Fund."></textarea>
+        <textarea name="message" rows="5" maxlength="700" placeholder="Introduce yourself and your interest in Shui Fund." required></textarea>
 
         <button type="submit">Send Message</button>
     </form>
@@ -125,13 +113,8 @@
 
 <section id="legal">
     <h2>Legal & Compliance</h2>
-    <p><strong>Disclosures:</strong><br>
-        Information provided on this website is for informational purposes only. Past performance does not guarantee future results. Investments carry risk, including the potential loss of principal. Portfolio allocations are illustrative and may not represent actual investments.
-    </p>
-
-    <p><strong>Privacy Policy:</strong><br>
-        Shui Fund values your privacy. We collect necessary information to enhance user experience. Data is not sold or rented to third parties. By using this site, you agree to our data collection practices.
-    </p>
+    <p><strong>Disclosures:</strong> Information is for informational purposes only. Investments involve risk, including potential loss of principal. Portfolio allocations are illustrative.</p>
+    <p><strong>Privacy Policy:</strong> Shui Fund respects your privacy. Information is used solely to improve services and is not sold to third parties.</p>
 </section>
 
 <footer>
