--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="description" content="Shui Fund is a global investment firm specializing in American, Hong Kong, Chinese, and Indian markets. Our strategies include hedge fund management, quantitative trading, and cryptocurrency investments.">
     <meta name="keywords" content="Shui Fund, Investment Strategies, Hedge Fund, Quantitative Trading, Cryptocurrency, American Stock Market, Hong Kong Market, Chinese Market, Indian Market, Currency Trading">
     <meta name="author" content="Shui Fund">
+    <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://shuifund.com/">
-    <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
 
     <!-- Open Graph Tags -->
     <meta property="og:title" content="Shui Fund - Global Investment Strategies">
@@ -24,19 +24,16 @@
     <meta name="twitter:description" content="Explore Shui Fund’s diversified investment strategies, including hedge fund management, currency trading, and crypto investments.">
     <meta name="twitter:image" content="https://static01.nyt.com/images/2017/09/15/arts/15landscape2/15landscape2-master1050.jpg">
 
-    <!-- Allow search engines to index -->
-    <meta name="robots" content="index, follow">
-
     <style>
         body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
         nav { background-color: #003366; color: white; padding: 10px; text-align: center; }
         nav a { color: white; margin: 0 15px; text-decoration: none; }
-        header { 
-            text-align: center; 
-            padding: 100px 20px; 
-            background: url('https://static01.nyt.com/images/2017/09/15/arts/15landscape2/15landscape2-master1050.jpg') no-repeat center center; 
-            background-size: cover; 
-            color: white; 
+        header {
+            text-align: center;
+            padding: 100px 20px;
+            background: url('https://static01.nyt.com/images/2017/09/15/arts/15landscape2/15landscape2-master1050.jpg') no-repeat center center;
+            background-size: cover;
+            color: white;
             position: relative;
         }
         header::before {
@@ -74,38 +71,38 @@
 
 <section id="about">
     <h2>About Us</h2>
-    <p>Shui Fund is built on a foundation of global expertise, with team members from top-tier companies across finance, biotechnology, and technology sectors. This diverse background enables us to navigate complex markets with a holistic and data-driven approach.</p>
-    <p>We are proud to be funded by elite family offices based in Hong Kong, New York, and Singapore, reinforcing our commitment to delivering consistent and superior investment outcomes.</p>
+    <p>Shui Fund is founded on global expertise, with team members from top-tier companies in finance, biotechnology, and technology. This diverse background enables us to navigate complex markets with a data-driven and holistic approach.</p>
+    <p>Our operations are supported by family offices from Hong Kong, New York, and Singapore, ensuring long-term investment stability and strategic growth.</p>
 </section>
 
 <section id="strategy">
     <h2>Investment Strategies</h2>
     <ul>
-        <li><strong>American Stock Market:</strong> Leveraging quantitative models to identify growth opportunities.</li>
-        <li><strong>Hong Kong and Chinese Markets:</strong> Capitalizing on market fluctuations and policy-driven changes.</li>
-        <li><strong>Indian Stock Market:</strong> Investing in high-growth sectors of a fast-growing economy.</li>
-        <li><strong>Currency Trading:</strong> Utilizing exchange rate movements to diversify and enhance returns.</li>
-        <li><strong>Cryptocurrency Trading:</strong> Exploring digital assets to capture emerging trends.</li>
+        <li><strong>American Stock Market:</strong> Applying quantitative models to identify consistent growth opportunities.</li>
+        <li><strong>Hong Kong and Chinese Markets:</strong> Leveraging market volatility and policy shifts for optimized returns.</li>
+        <li><strong>Indian Stock Market:</strong> Targeting high-growth sectors in a rapidly developing economy.</li>
+        <li><strong>Currency Trading:</strong> Capitalizing on global currency fluctuations to enhance portfolio diversification.</li>
+        <li><strong>Cryptocurrency Trading:</strong> Engaging with emerging digital assets for strategic growth potential.</li>
     </ul>
 </section>
 
 <section id="careers">
     <h2>Careers</h2>
-    <p>We are always seeking talented individuals. If you are passionate about global markets, quantitative research, or innovative strategies, introduce yourself (100 words) via the contact form below.</p>
+    <p>We are actively seeking talented individuals passionate about global markets, quantitative research, and innovative investment strategies. Interested candidates should introduce themselves (100 words) via the contact form below.</p>
 </section>
 
 <section id="contact">
     <h2>Contact Us</h2>
-    <p>Interested in learning more or joining our team? Complete the form below. We’ll reach out promptly.</p>
+    <p>Want to learn more or explore opportunities with us? Fill out the form below, and we will get back to you.</p>
     <form action="https://formspree.io/f/xqaejzqw" method="POST">
         <label for="name">Name:</label>
-        <input type="text" name="name" required>
+        <input type="text" name="name" placeholder="Your Name" required>
 
         <label for="email">Email:</label>
-        <input type="email" name="email" required>
+        <input type="email" name="email" placeholder="Your Email" required>
 
         <label for="message">Introduction (100 words):</label>
-        <textarea name="message" rows="5" maxlength="700" placeholder="Introduce yourself and your interest in Shui Fund." required></textarea>
+        <textarea name="message" rows="5" maxlength="700" placeholder="Introduce yourself and share your interest in Shui Fund." required></textarea>
 
         <button type="submit">Send Message</button>
     </form>
@@ -113,8 +110,8 @@
 
 <section id="legal">
     <h2>Legal & Compliance</h2>
-    <p><strong>Disclosures:</strong> Information is for informational purposes only. Investments involve risk, including potential loss of principal. Portfolio allocations are illustrative.</p>
-    <p><strong>Privacy Policy:</strong> Shui Fund respects your privacy. Information is used solely to improve services and is not sold to third parties.</p>
+    <p><strong>Disclosures:</strong> The information provided is for informational purposes only. Investments involve risk, including the possible loss of principal. Portfolio allocations shown are illustrative and subject to change.</p>
+    <p><strong>Privacy Policy:</strong> Shui Fund respects user privacy. Data collected through the contact form is used solely for communication and is never sold to third parties.</p>
 </section>
 
 <footer>
